feat: fixed bug and made small visual changes

--- a/mock/src/styles/App.css
+++ b/mock/src/styles/App.css
@@ -8,7 +8,7 @@
   left: 0px;
   top: -10px;
   width: 100%;
-  background-color: #282c34;
+  background-color: #2d333f;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
