--- a/mock/src/styles/repl.css
+++ b/mock/src/styles/repl.css
@@ -1,55 +1,56 @@
 .repl {
-    position:absolute;
-    left: 0px;
-    top: 220px;
-    width: 100%;
-    min-height:75vh;    
-    background-color: lightblue;
+  position: absolute;
+  left: 0px;
+  top: 220px;
+  width: 100%;
+  min-height: 75vh;
+  background-color: lightblue;
 }
 
-.repl-history {      
-    height:55vh;   
-    margin: auto;
-    display: block;
-    overflow: scroll;    
+.repl-history {
+  height: 55vh;
+  margin: auto;
+  display: block;
+  overflow: scroll;
 }
 
 .mode-button {
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 5px;
-    height: 33px;
-    font-size: small;
-    position: absolute;
-    left: 23%;
-    top: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 5px;
+  height: 33px;
+  font-size: small;
+  position: absolute;
+  left: 23%;
+  top: 15px;
 }
 
-.repl-input {        
-    margin: auto;    
-    height:50px;
+.repl-input {
+  margin: auto;
+  height: 50px;
 }
 
 .repl-command-box {
-    width: 55%;            
-    margin: auto;
-    display: block;
-    background-color: white;
-    border: none;
-    height: 37px;
-    border-radius: 25px;
-    padding-left: 15px;
-    padding-right: 15px;
+  width: 55%;
+  margin: auto;
+  display: block;
+  background-color: white;
+  border: none;
+  height: 37px;
+  border-radius: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: cadetblue;
 }
 
-fieldset{
-    border: none;
+fieldset {
+  border: none;
 }
 
 .submit-button {
-    background-color: rgb(223, 223, 223);
-    border-radius: 25px;
-    height: 40px;
-    width: 165px;
-    font-size: 14px;
+  background-color: rgb(223, 223, 223);
+  border-radius: 25px;
+  height: 40px;
+  width: 165px;
+  font-size: 14px;
 }
