--- a/mock/src/styles/App.css
+++ b/mock/src/styles/App.css
@@ -4,10 +4,9 @@
 }
 
 .App-header {
-  position: absolute;
-  left: 0px;
   top: -10px;
   width: 100%;
+  position: absolute;
   background-color: #2d333f;
   min-height: 8vh;
   display: flex;
@@ -16,4 +15,5 @@
   justify-content: center;
   font-size: calc(1px + 2vmin);
   color: white;
+  border-radius: 75px;
 }
