--- a/mock/src/styles/index.css
+++ b/mock/src/styles/index.css
@@ -12,15 +12,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #3fbef8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #3fbef8;
 }
 
 h1 {
@@ -40,11 +41,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: #324e7a;
 }
 
 @media (prefers-color-scheme: light) {
