--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -4,12 +4,14 @@
   give you this starter CSS. Feel free to modify it as you wish, though.
 */
 
-.login-button{
-    z-index: 100; 
-    margin: auto;
-    display: block;
-    position: absolute;
-    top: 150px;
-    border-radius: 25px;
-    background-color: rgb(211, 211, 211);;
+.login-button {
+  z-index: 100;
+  margin: auto;
+  display: block;
+  position: absolute;
+  top: 150px;
+  border-radius: 20px;
+  border-color: rgb(67, 191, 203);
+  border-width: 4px;
+  background-color: rgb(164, 194, 197);
 }
