feat: added load/search/view command handling

--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -11,7 +11,7 @@
   position: absolute;
   top: 150px;
   border-radius: 20px;
-  border-color: rgb(67, 191, 203);
+  border-color: rgb(71, 163, 179);
   border-width: 4px;
-  background-color: rgb(164, 194, 197);
+  background-color: lightblue;
 }
