feat: minor visual changes

--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -13,5 +13,5 @@
   border-radius: 20px;
   border-color: rgb(71, 163, 179);
   border-width: 4px;
-  background-color: lightblue;
+  background-color: rgb(152, 210, 229);
 }
