--- a/mock/src/styles/repl.css
+++ b/mock/src/styles/repl.css
@@ -15,6 +15,11 @@
   overflow: scroll;
 }
 
+.repl-history table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .repl-input {
   margin: auto;
   height: 50px;
